--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Canned-soup.html">Canned Soup</a>
-    <a href="recipes/Cheese.html">Cheese</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/onions.html">Mushrooms</a>
-    <a href="recipes/mushrooms.html"> Onions</a>
+
+
+    <a href="recipes/Biriyani.html">Canned Soup</a>
+    <a href="recipes/Pasta.html">Cheese</a>,<br>
+    <a href="recipes/lasagna.html">Lasagna</a><br>
+
     
 </body>
 </html>
