edited all recipes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-
+<ul>
     <a href="recipes/Biriyani.html">Canned Soup</a>
-    <a href="recipes/Pasta.html">Cheese</a>,<br>
-    <a href="recipes/lasagna.html">Lasagna</a><br>
-
+    <a href="recipes/Pasta.html">Cheese</a>
+    <a href="recipes/lasagna.html">Lasagna</a>
+</ul>
     
 </body>
 </html>
