--- a/recipes/Biriyani.html
+++ b/recipes/Biriyani.html
@@ -7,7 +7,21 @@
 </head>
 <body>
     <h1>Biriyani</h1>
-    <img src="https://www.allrecipes.com/thmb/ky6PTW2lBQ1DGE_VQKPrBdHRFTk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/68506-756cc95b67234d6492ab18b982de583d.jpg" height="300" width="300" >
+    <img src="https://www.allrecipes.com/thmb/ky6PTW2lBQ1DGE_VQKPrBdHRFTk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/68506-756cc95b67234d6492ab18b982de583d.jpg" alt= "Image of a Biriyani" height="300" width="300" >
     <p>Biriyani, a spicy chicken and rice dish, is one of the most well-known Indian-Pakistani dishes.</p>
+    <h2>List of ingredients</h2>
+    <ul>
+
+        <li>Biriyanii Rice</li>
+        <li>Oil</li>
+        <li>Cashew Nut</li>
+    </ul>
+    <h2>Preparation</h2>
+        <ol>
+           <li>Once you have your chicken marinated, rice and fried onions ready, start by cooking the marinated chicken. To cook the chicken, place it in the dutch oven or a large pot that you plan to use for cooking the biryani, and cook them for 7 minutes. There is no need to stir the chicken, only flip it once around the 4 minute mark.
+
+            </li> <li>Once the chicken is partially cooked, the next step is to layer it with the fried onions, mint and coriander. The onions add sweetness and richness while the herbs add a ton of flavor and freshness. </li>
+
+        </ol> 
 </body>
 </html>
