--- a/recipes/Pasta.html
+++ b/recipes/Pasta.html
@@ -7,7 +7,25 @@
 </head>
 <body>
     <h1>Pasta</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fa6fdce81e1891c504cc07f24ea4b2122%2F1688241281708Pasta-Salad-Recipe.jpg&q=60&c=sc&orient=true&poi=auto&h=512" height="300" width="300" >
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fa6fdce81e1891c504cc07f24ea4b2122%2F1688241281708Pasta-Salad-Recipe.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt= "Image of a pasta" height="300" width="300" >
     <p>A homemade Italian pasta salad dressing takes this simple pasta salad loaded with veggies, cheese, pepperoni, and olives to a whole new level! Serve it right away or make it ahead for packed lunches, picnics, or summer barbecues.</p>
+    <h2>List of ingredients</h2>
+    <ul>
+
+        <li>Cumin seeds</li>
+        <li>Cloves</li>
+        <li>Garlic</li>
+    </ul>
+    <h2>Preparation</h2>
+    <ol>
+
+        <li>Always, always salt the pasta water!</li> <li>It will affect the taste of the pasta, and the sauce you serve it with, so never miss out this step.</li>  
+        <li>Avoid food waste and measure your portions. 75g of dried pasta per person is about right. If you’re cooking for 4 people, you’ll need 300g of pasta.
+            Give your pasta plenty of room to cook – so you want a large pan.</li>
+        
+        <li>Cover your pan with a lid to help bring the water up to the boil more quickly, then remove the lid once the water is boiling or reduce the temperature slightly to stop it bubbling over.
+        Add the pasta to the water once it’s boiling, never before, and cook without the lid.</li>
+    </ol>
 </body>
+
 </html>
