--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,24 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="https://www.allrecipes.com/thmb/yczY-fmMtRZHxrD8Q-_i4nsJZ1I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19344_homemade-lasagna_Rita2-3x2-1-7da94c32febf48dfbcc2d29b06f54e67.jpg" height="300" width="300" >
+    <img src="https://www.allrecipes.com/thmb/yczY-fmMtRZHxrD8Q-_i4nsJZ1I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19344_homemade-lasagna_Rita2-3x2-1-7da94c32febf48dfbcc2d29b06f54e67.jpg" alt= "Image of a Lasagna" height="300" width="300" >
     <p>This is  special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
+    <h2>List of ingredients</h2>
+    <ul>
+
+        <li>Cheese</li>
+        <li>Chicken</li>
+        <li>Jalapenos</li>
+    </ul>
+    <h2>Preparation</h2>
+    <ol>
+            <li>
+                Boil pasta: Cook in a large pot of salted water per the recipe below.
+                Combine cheese mixture: Stir the cheese mixture together in a bowl.
+
+            </li>
+            <li>Prepare meat sauce: Cook sausage and beef with onion and garlic. Drain well, add the pasta sauce & simmer it for a few minutes to thicken.</li>
+            <li>Layer & bake: Layer the meat sauce and cheese mixture with lasagna noodles and bake until browned and bubbly.</li>
+    </ol>
 </body>
 </html>
