--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
 
 <ul>
-    <a href="recipes/Biriyani.html">Canned Soup</a>
-    <a href="recipes/Pasta.html">Cheese</a>
+    <a href="recipes/Biriyani.html">Biriyani</a>
+    <a href="recipes/Pasta.html">Pasta</a>
     <a href="recipes/lasagna.html">Lasagna</a>
 </ul>
     
