added as a list

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Odin Recipes</h1>
 
 <ul>
-    <a href="recipes/Biriyani.html">Biriyani</a>
-    <a href="recipes/Pasta.html">Pasta</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
+   <Li> <a href="recipes/Biriyani.html">Biriyani</a></Li>
+   <li> <a href="recipes/Pasta.html">Pasta</a></li>
+   <li><a href="recipes/lasagna.html">Lasagna</a></li>
 </ul>
     
 </body>
